@@ -6,12 +6,11 @@ COPY src ./src
 RUN mvn versions:set -DnewVersion=${version} && \
   mvn package -P assembly
 
-FROM adoptopenjdk/openjdk13:alpine-jre
+FROM adoptopenjdk/openjdk14:alpine-jre
+ENV JVM_OPTS=""
 LABEL description="Artipie binary repository managment tool"
 LABEL maintainer="titantins@gmail.com"
 LABEL maintainer="g4s8.public@gmail.com"
 COPY --from=build_jar /jar/target/artipie-jar-with-dependencies.jar /usr/lib/artipie.jar
-COPY _config.yml /etc/artipie.yml
 EXPOSE 80
-ENTRYPOINT ["java", "-jar", "/usr/lib/artipie.jar"]
-CMD ["--config-file=/etc/artipie.yml", "--port=80"]
+CMD java $JVM_OPTS --enable-preview -XX:+ShowCodeDetailsInExceptionMessages -jar /usr/lib/artipie.jar --config-file=/etc/artipie.yml --port=80
